--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
     <section class="about">
         <div class="about-img">
-            <img src="image.jpg" alt="Image">
+            <img src="image1.jpg" alt="Image">
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
